k8s/apps/internal/glance/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: glance
  namespace: glance
spec:
  replicas: 1
  selector:
    matchLabels:
      app: glance
  template:
    metadata:
      labels:
        app: glance
    spec:
      containers:
        - name: glance
          image: glanceapp/glance:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: "/app/config/glance.yml"
              name: config-glance
              subPath: glance.yml
      volumes:
        - name: config-glance
          configMap:
            name: config-glance
