k8s/apps/internal/glance/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: glance
  namespace: glance
spec:
  selector:
    app: glance
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: LoadBalancer
