k8s/apps/internal/glance/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: glance
  namespace: glance
spec:
  parentRefs:
    - name: external
      namespace: gateway
    - name: internal
      namespace: gateway
  hostnames:
    - "glance.kube.ravil.space"
    - "glance.home.ravil.space"
  rules:
    - backendRefs:
        - name: glance
          port: 8080
